Force scroll to prevent nav layout shift

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,6 +7,7 @@
 body{
     min-height: 100vh;
     font-family: 'Noto Sans JP', sans-serif;
+    overflow-y: scroll;
 }
 
 a{
